# CW_DRF

./: .env_sample  .flake8  command.txt  cov_report_1.txt  cov_report_2.txt  cov_report_3.txt  drf.cmd  pyproject.toml  readme.md
config/: celery.py  settings.py  urls.py
habits/: models.py  paginators.py  permissions.py  serializers.py  servises.py  task.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_habit_frequency_type_habit_weekdays_and_more.py  0004_remove_habit_period.py  0005_remove_habit_habit_start_alter_habit_frequency_type.py
users/: admin.py  models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
